# MyGame

./: CMakeLists.txt  MyGame.pptx  main_physics_example.txt  ~$MyGame.pptx
include/: DetectSystemLanguage.h  DrawHero.h  DrawLevel.h  DrawPolyline.h  Level1_Screen1.h  Level1_Screen2.h  OptionsScreen.h  PointsHero.h  RenderUtils.h  StartScreen.h  Variables.h  Window.h
src/: DetectSystemLanguage.cpp  DrawHero.cpp  DrawLevel.cpp  DrawPolyline.cpp  Level1_Screen1.cpp  Level1_Screen2.cpp  OptionsScreen.cpp  PointsHero.cpp  RenderUtils.cpp  StartScreen.cpp  Variables.cpp  Window.cpp  main.cpp
